# voxel-example

./: Cargo.toml
assets/: instancing.wgsl
assets/palette/: blockstates.json
src/: character.rs  main.rs  ui.rs
src/render_pipeline/: cpu_brickmap.rs  gpu_brickmap.rs  height_mapper.rs  load_anvil.rs  mod.rs  voxel_render.rs  voxel_world.rs  world_builder.rs
src/ultilities/: mod.rs  timeit.rs
