[package]
name = "alex"
version = "0.1.0"
edition = "2021"
description = "A massive scale voxel engine"
repository = "https://github.com/ria8651/alex"
default-run = "alex"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_pbr",
    "multi_threaded",
    "tonemapping_luts",
    "bevy_sprite",
    "png",
    "wayland",
] }
bevy_egui = "0.29"
fastanvil = "0.31"
fastnbt = "2.4"
serde_json = "1.0"
bevy-inspector-egui = "0.26"
wgpu = { version = "0.20.1", default-features = false }
bytemuck = "1.7"
anyhow = "1.0"
radsort = "0.1"
minecraft-assets = "0.0.6"
crossbeam = "0.8"
dot_vox = "5.1"
#might be desktop only
rayon = "1.7"
noise ="0.9"
once_cell="1.18.0"
image = "0.25"